--- a/src/app/page/events-list/events-list.component.html
+++ b/src/app/page/events-list/events-list.component.html
@@ -13,15 +13,16 @@
     </thead>
     <tbody>
       <tr *ngFor="let event of eventList | async">
-        <td>{{event.name}}</td>
-        <td>{{event.date}} </td>
-        <td>{{event.time}}</td>
-        <td>{{event.location}}</td>
+        <td>{{ event.name }}</td>
+        <td>{{ event.date }}</td>
+        <td>{{ event.time }}</td>
+        <td>{{ event.location }}</td>
         <td>
-
+          <button class="btn btn-info" [routerLink]="['/event', event.id]">
+            <i class="fa fa-pencil"></i>
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
-
 </div>
