--- a/src/app/page/event-editor/event-editor.component.html
+++ b/src/app/page/event-editor/event-editor.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-6 offset-3">
-    <form #eventform="ngForm" (ngSubmit)="onUpdate(eventForm)">
+    <form #eventform="ngForm" (ngSubmit)="onUpdate(eventform)">
       <div class="form-group">
         <label for="eventName">Name</label>
         <input
@@ -14,7 +14,7 @@
           #eventName="ngModel"
         />
       </div>
-      <div [hidden]="eventForm.controls['name']?.valid" class="error-message">
+      <div [hidden]="eventform.controls['name']?.valid" class="error-message">
         Event name should be at least 8 characters long!
       </div>
       <div class="form-group">
@@ -29,7 +29,7 @@
           #eventDate="ngModel"
         />
       </div>
-      <div class="error-message" [hidden]="eventForm.controls['date']?.valid">
+      <div class="error-message" [hidden]="eventform.controls['date']?.valid">
         Event date is required!
       </div>
       <div class="form-group">
@@ -44,7 +44,7 @@
           #eventTime="ngModel"
         />
       </div>
-      <div class="error-message" [disabled]="eventForm.controls['time']?.valid">
+      <div class="error-message" [disabled]="eventform.controls['time']?.valid">
         Event time is required!
       </div>
       <div class="form-group">
@@ -61,12 +61,12 @@
       </div>
       <div
         class="error-message"
-        [disabled]="eventForm.controls['location']?.valid"
+        [disabled]="eventform.controls['location']?.valid"
       >
         Event location is required!
       </div>
       <button
-        [disabled]="eventForm.invalid"
+        [disabled]="eventform.invalid"
         type="submit"
         class="btn btn-block btn-primary"
       >
